--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@ body {
     color: white;
     font-family: 'Lato', sans-serif;
 
-    background-color: #7f5a83;
-    background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
+    background-image: url("background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover; 
+
+   /* background-color: #7f5a83;
+    background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);*/
 
 }
 
@@ -17,12 +21,17 @@ div.container {
     height: 100vh; /* 100vh seems to allow some scroll, so I reduced to 95vh */
 }
 
+div.checkbox {
+    display: flex;
+    flex-direction: row;
+}
+
 form.login-form {
     display: flex;
     flex-direction: column;
-    width: 40%;
+    min-width: 400px;
 
-    background-color: #202020;
+    background-color: #834f3c;
     border-radius: 30px;
 
     padding: 100px 50px 100px 50px;
@@ -35,7 +44,7 @@ h1 {
 
 input {
     height: 40px;
-    background-color: #484848;
+    background-color: #593326;
     border: none;
     border-radius: 5px;
 
@@ -46,8 +55,8 @@ input {
 
 input:focus {
     outline: none;
-    border:1px solid #4589ba ;
-    box-shadow: 0 0 5px #4589ba ;
+    border:1px solid #7c4836;
+    box-shadow: 0 0 5px #7c4836;
 
 }
 
@@ -56,11 +65,24 @@ input:focus[type=checkbox] { /* removing input:focus styles for the checkbox inp
     box-shadow: none;
 }
 
+label[for=checkbox] {
+    padding-top: 8px;
+    padding-left: 10px;
+    font-size: 15px;
+}
 
-/*
-RESPONSIVE SETTINGS
-*/
-
-@media max-height 500px {
+.btn {
+    margin-top: 20px;
+    width: 90px;
+    border: solid 1px white;
+    color: white;
     
 }
+
+.btn:hover{
+    background-color: white;
+    border: solid 1px white;
+    color: #7c4836;
+}
+
+
