changed colors, added background picture, centering and aligning

--- a/style.css
+++ b/style.css
@@ -5,41 +5,38 @@ body {
     font-family: 'Lato', sans-serif;
 
     background-image: url("background.jpg");
-    background-repeat: no-repeat;
     background-size: cover; 
-
-   /* background-color: #7f5a83;
-    background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);*/
-
+    background-position: center;  
 }
 
 
 div.container {
     display: flex;  
+    flex-wrap: wrap;
     align-items: center; /* vertical center */
     justify-content: center; /* horizontal center */
-    height: 100vh; /* 100vh seems to allow some scroll, so I reduced to 95vh */
-}
-
-div.checkbox {
-    display: flex;
-    flex-direction: row;
+    height: 100vh;
 }
 
 form.login-form {
     display: flex;
     flex-direction: column;
+    align-content: center; 
     min-width: 400px;
+    min-height: 500px;
 
     background-color: #834f3c;
     border-radius: 30px;
 
     padding: 100px 50px 100px 50px;
+
+    -webkit-box-shadow: -4px 4px 6px 0px rgba(89,51,38,1); /* box shadow */
+    -moz-box-shadow: -4px 4px 6px 0px rgba(89,51,38,1);
+    box-shadow: -4px 4px 6px 0px rgba(89,51,38,1);
 }
 
 h1 {
-    display: flex;
-    justify-content: center;
+    text-align: center;
 }
 
 input {
@@ -55,14 +52,17 @@ input {
 
 input:focus {
     outline: none;
-    border:1px solid #7c4836;
-    box-shadow: 0 0 5px #7c4836;
-
+    border:1px solid white;
 }
 
 input:focus[type=checkbox] { /* removing input:focus styles for the checkbox input */
     border:none;
     box-shadow: none;
+}
+
+div.checkbox {
+    display: flex;
+    flex-direction: row;
 }
 
 label[for=checkbox] {
@@ -73,16 +73,26 @@ label[for=checkbox] {
 
 .btn {
     margin-top: 20px;
-    width: 90px;
     border: solid 1px white;
     color: white;
-    
 }
 
-.btn:hover{
+.btn:hover {
     background-color: white;
     border: solid 1px white;
     color: #7c4836;
+}
+
+a {
+    position: relative;
+    top: 30px;
+    text-align: center;
+    text-decoration: underline;
+    color: white;
+}
+
+a:hover{
+    color: gray;
 }
 
 
